# gobang-game

./: .gitignore  BUILD.md  CMakeLists.txt  GitHub构建清单.md  INSTALL.md  README.md  Windows构建指南.md  Windows版本手动修复指南.md  build_all.sh  build_instructions.sh  build_linux.sh  build_macos.sh  build_windows.bat  console_gobang  console_gobang.c  docker_windows_build.sh  github_auth_fix.sh  github_upload_guide.sh  gobang.desktop  manual_commands.txt  simple_gobang.cpp  stop_music.sh  temp.dmg  trigger_windows_build.sh  update_token_and_push.sh  下载Qt库文件助手.bat  五子棋游戏-1.0.0-macOS.dmg  使用说明.txt  功能设计文档.md  原型设计文档.md  快速安装指南.md  快速开始Windows构建.sh  快速获取Qt库文件.ps1  手动添加GitHub_Actions指南.md  故障排除指南.md  立即上传到GitHub.sh  立即构建Windows版本.md  需求规格说明书.md  项目完成总结.md  项目总结.md
.github/workflows/: build.yml
build_macos/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_macos/Gobang.app/Contents/Frameworks/: libQt5Concurrent.5.dylib  libQt5DBus.5.dylib  libQt5Multimedia.5.dylib  libQt5MultimediaGstTools.5.dylib  libQt5MultimediaWidgets.5.dylib  libQt5Network.5.dylib  libQt5OpenGL.5.dylib  libQt5PrintSupport.5.dylib  libQt5Qml.5.dylib  libQt5QmlModels.5.dylib  libQt5Quick.5.dylib  libQt5Svg.5.dylib  libQt5VirtualKeyboard.5.dylib  libc++.1.dylib  libffi.8.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgstapp-1.0.0.dylib  libgstaudio-1.0.0.dylib  libgstbase-1.0.0.dylib  libgstpbutils-1.0.0.dylib  libgstreamer-1.0.0.dylib  libgsttag-1.0.0.dylib  libgstvideo-1.0.0.dylib  libiconv.2.dylib  libicui18n.73.dylib  libicuuc.73.dylib  libintl.8.dylib  libjpeg.9.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libssl.3.dylib  libz.1.dylib  libzstd.1.dylib
build_macos/Gobang.app/Contents/MacOS/: Gobang
build_macos/Gobang.app/Contents/PlugIns/audio/: libqtaudio_coreaudio.dylib
build_macos/Gobang.app/Contents/PlugIns/bearer/: libqgenericbearer.dylib
build_macos/Gobang.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
build_macos/Gobang.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmacjp2.dylib  libqpdf.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
build_macos/Gobang.app/Contents/PlugIns/mediaservice/: libgstaudiodecoder.dylib  libgstcamerabin.dylib  libgstmediacapture.dylib  libgstmediaplayer.dylib  libqavfcamera.dylib  libqavfmediaplayer.dylib  libqtmedia_audioengine.dylib
build_macos/Gobang.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
build_macos/Gobang.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
build_macos/Gobang.app/Contents/PlugIns/styles/: libqmacstyle.dylib
build_macos/Gobang.app/Contents/PlugIns/virtualkeyboard/: libqtvirtualkeyboard_hangul.dylib  libqtvirtualkeyboard_openwnn.dylib  libqtvirtualkeyboard_pinyin.dylib  libqtvirtualkeyboard_tcime.dylib  libqtvirtualkeyboard_thai.dylib
build_macos/Gobang_autogen/I5UM235HFU/: moc_AudioManager.cpp.d  moc_ConfigManager.cpp  moc_ConfigManager.cpp.d
build_macos/Gobang_autogen/LUT2VLOM2C/: moc_AIPlayer.cpp.d  moc_MinimaxAI.cpp  moc_MinimaxAI.cpp.d
build_macos/Gobang_autogen/PRMOGMWJPH/: moc_ChessBoard.cpp.d  moc_GameEngine.cpp  moc_GameEngine.cpp.d  moc_GameRule.cpp.d  moc_Player.cpp.d
build_macos/Gobang_autogen/YPKJ5OE7LN/: moc_GameWidget.cpp  moc_GameWidget.cpp.d  moc_MainWindow.cpp.d  moc_SettingsDialog.cpp.d
build_macos/_CPack_Packages/macOS/DragNDrop/五子棋游戏-1.0.0-macOS/Gobang.app/Contents/: Info.plist
src/: main.cpp
src/ai/: AIPlayer.cpp  AIPlayer.h  MinimaxAI.cpp  MinimaxAI.h
src/core/: ChessBoard.cpp  ChessBoard.h  GameEngine.cpp  GameEngine.h  GameRule.cpp  GameRule.h  Player.cpp  Player.h
src/managers/: AudioManager.cpp  AudioManager.h  ConfigManager.cpp  ConfigManager.h
src/ui/: GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
(+1 files in other folders)
